package hostabi

import (
	"context"
	"fmt"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	ures "github.com/weisyn/v1/pkg/interfaces/ures"

	// å†…éƒ¨æ¥å£
	ispcInterfaces "github.com/weisyn/v1/internal/core/ispc/interfaces"
	publicispc "github.com/weisyn/v1/pkg/interfaces/ispc"

	// Protobuf å®šä¹‰
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pbresource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"google.golang.org/protobuf/proto"
)

// â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
// HostRuntimePorts - HostABI å®ç°ï¼ˆISPC è¿è¡ŒæœŸå®¿ä¸»èƒ½åŠ›ç«¯å£ï¼‰
// â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
//
// ğŸ¯ **è®¾è®¡ç›®çš„**ï¼š
// å®ç° publicispc.HostABI æ¥å£ï¼Œæä¾› 17 ä¸ªæœ€å°åŸè¯­ï¼Œæ— ä¸šåŠ¡è¯­ä¹‰ã€‚
// å§”æ‰˜æ¨¡å¼ï¼šä¸ç›´æ¥æ“ä½œ DraftTxï¼Œè€Œæ˜¯å§”æ‰˜ç»™ TransactionDraftServiceã€‚
//
// ğŸ—ï¸ **å®ç°ç­–ç•¥**ï¼š
// - ç±»åˆ« Aï¼ˆé“¾ä¸Šä¸Šä¸‹æ–‡ï¼‰ï¼šå§”æ‰˜ç»™ chainService + execCtx
// - ç±»åˆ« Bï¼ˆUTXO æŸ¥è¯¢ï¼‰ï¼šå§”æ‰˜ç»™ utxoManager
// - ç±»åˆ« Cï¼ˆäº¤æ˜“è‰ç¨¿ï¼‰ï¼šå§”æ‰˜ç»™ draftService
// - ç±»åˆ« Dï¼ˆèµ„æºæŸ¥è¯¢ï¼‰ï¼šå§”æ‰˜ç»™ repoManager
//
// ğŸ”’ **å¹¶å‘å®‰å…¨**ï¼š
// - æ¯æ¬¡æ‰§è¡Œåˆ›å»ºç‹¬ç«‹å®ä¾‹
// - åº•å±‚æœåŠ¡è‡ªèº«ä¿è¯å¹¶å‘å®‰å…¨
// - ExecutionContext æ“ä½œå•æ¬¡æ‰§è¡Œçš„è‰ç¨¿ï¼Œæ— è·¨æ‰§è¡Œç«äº‰
//
// â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ

// HostRuntimePorts HostABI å®ç°
type HostRuntimePorts struct {
	logger log.Logger

	// åº•å±‚æœåŠ¡
	chainQuery    persistence.ChainQuery
	blockQuery    persistence.BlockQuery
	eutxoQuery    persistence.UTXOQuery
	uresCAS       ures.CASStorage
	txQuery       persistence.TxQuery
	resourceQuery persistence.ResourceQuery
	draftService  tx.TransactionDraftService
	hashManager   crypto.HashManager // å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºè®¡ç®—åŒºå—å“ˆå¸Œï¼‰

	// æ‰§è¡Œä¸Šä¸‹æ–‡ï¼ˆæä¾›ç¡®å®šæ€§åŒºå—è§†å›¾ï¼‰
	execCtx ispcInterfaces.ExecutionContext
}

// ç¡®ä¿å®ç°æ¥å£ï¼ˆå…¬å…±æ¥å£ç±»å‹ï¼‰
var _ publicispc.HostABI = (*HostRuntimePorts)(nil)

// NewHostRuntimePorts åˆ›å»º HostABI å®ç°
//
// ğŸ“‹ **å‚æ•°**ï¼š
//   - logger: æ—¥å¿—æœåŠ¡
//   - chainQuery: é“¾æŸ¥è¯¢æœåŠ¡
//   - eutxoQuery: UTXOæŸ¥è¯¢æœåŠ¡
//   - uresCAS: èµ„æºå­˜å‚¨æœåŠ¡
//   - txQuery: äº¤æ˜“æŸ¥è¯¢æœåŠ¡
//   - resourceQuery: èµ„æºæŸ¥è¯¢æœåŠ¡
//   - draftService: äº¤æ˜“è‰ç¨¿æ„å»ºæœåŠ¡
//   - hashManager: å“ˆå¸Œç®¡ç†å™¨ï¼ˆç”¨äºè®¡ç®—åŒºå—å“ˆå¸Œï¼‰
//   - execCtx: å½“å‰æ‰§è¡Œä¸Šä¸‹æ–‡
//
// ğŸ”§ **è¿”å›å€¼**ï¼š
//   - publicispc.HostABI: HostABI å®ä¾‹
//   - error: åˆ›å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
//
// ğŸ¯ **ç”¨é€”**ï¼šç”± ISPC Coordinator åœ¨æ¯æ¬¡æ‰§è¡Œå‰åˆ›å»ºå¹¶æ³¨å…¥åˆ° ExecutionContext
func NewHostRuntimePorts(
	logger log.Logger,
	chainQuery persistence.ChainQuery,
	blockQuery persistence.BlockQuery,
	eutxoQuery persistence.UTXOQuery,
	uresCAS ures.CASStorage,
	txQuery persistence.TxQuery,
	resourceQuery persistence.ResourceQuery,
	draftService tx.TransactionDraftService,
	hashManager crypto.HashManager,
	execCtx ispcInterfaces.ExecutionContext,
) (publicispc.HostABI, error) {
	if chainQuery == nil {
		return nil, fmt.Errorf("chainQuery ä¸èƒ½ä¸º nil")
	}
	if blockQuery == nil {
		return nil, fmt.Errorf("blockQuery ä¸èƒ½ä¸º nil")
	}
	if eutxoQuery == nil {
		return nil, fmt.Errorf("eutxoQuery ä¸èƒ½ä¸º nil")
	}
	if uresCAS == nil {
		return nil, fmt.Errorf("uresCAS ä¸èƒ½ä¸º nil")
	}
	if txQuery == nil {
		return nil, fmt.Errorf("txQuery ä¸èƒ½ä¸º nil")
	}
	if resourceQuery == nil {
		return nil, fmt.Errorf("resourceQuery ä¸èƒ½ä¸º nil")
	}
	if draftService == nil {
		return nil, fmt.Errorf("draftService ä¸èƒ½ä¸º nil")
	}
	if hashManager == nil {
		return nil, fmt.Errorf("hashManager ä¸èƒ½ä¸º nil")
	}
	if execCtx == nil {
		return nil, fmt.Errorf("æ‰§è¡Œä¸Šä¸‹æ–‡ä¸èƒ½ä¸º nil")
	}

	if logger != nil {
		logger.Debug("âœ… HostRuntimePorts åˆ›å»ºæˆåŠŸï¼ˆ17ä¸ªæœ€å°åŸè¯­ï¼Œæ— ä¸šåŠ¡è¯­ä¹‰ï¼‰")
	}

	return &HostRuntimePorts{
		logger:        logger,
		chainQuery:    chainQuery,
		blockQuery:    blockQuery,
		eutxoQuery:    eutxoQuery,
		uresCAS:       uresCAS,
		txQuery:       txQuery,
		resourceQuery: resourceQuery,
		draftService:  draftService,
		hashManager:   hashManager,
		execCtx:       execCtx,
	}, nil
}

// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
// ç±»åˆ« Aï¼šé“¾ä¸Šä¸Šä¸‹æ–‡æŸ¥è¯¢ï¼ˆåªè¯»ï¼‰- 7ä¸ªåŸè¯­
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

// GetBlockHeight è·å–å½“å‰åŒºå—é«˜åº¦ï¼ˆç¡®å®šæ€§å¿«ç…§ï¼‰
func (h *HostRuntimePorts) GetBlockHeight(ctx context.Context) (uint64, error) {
	// ä» chainService è·å–å½“å‰åŒºå—é«˜åº¦ï¼ˆä¸æ—§CLIä¸€è‡´ï¼‰
	info, err := h.chainQuery.GetChainInfo(ctx)
	if err != nil {
		return 0, fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetBlockHeight height=%d", info.Height)
	}

	return info.Height, nil
}

// GetBlockHash è·å–æŒ‡å®šé«˜åº¦çš„åŒºå—å“ˆå¸Œ
func (h *HostRuntimePorts) GetBlockHash(ctx context.Context, height uint64) ([]byte, error) {
	// è·å–é“¾ä¿¡æ¯ï¼Œæ£€æŸ¥æ˜¯å¦ä¸ºæœ€æ–°åŒºå—
	chainInfo, err := h.chainQuery.GetChainInfo(ctx)
	if err != nil {
		return nil, fmt.Errorf("è·å–é“¾ä¿¡æ¯å¤±è´¥: %w", err)
	}

	// å¦‚æœè¯·æ±‚çš„æ˜¯æœ€æ–°åŒºå—ï¼Œç›´æ¥è¿”å›
	if height == chainInfo.Height {
		if h.logger != nil {
			h.logger.Debugf("HostABI.GetBlockHash height=%d hash=%x", height, chainInfo.BestBlockHash[:8])
		}
		return chainInfo.BestBlockHash, nil
	}

	// å†å²åŒºå—æŸ¥è¯¢ï¼šé€šè¿‡ BlockQuery æŸ¥è¯¢å¹¶è®¡ç®—å“ˆå¸Œ
	block, err := h.blockQuery.GetBlockByHeight(ctx, height)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢å†å²åŒºå—å¤±è´¥: height=%d, error=%w", height, err)
	}

	if block == nil || block.Header == nil {
		return nil, fmt.Errorf("åŒºå—ä¸å­˜åœ¨æˆ–åŒºå—å¤´ä¸ºç©º: height=%d", height)
	}

	// è®¡ç®—åŒºå—å“ˆå¸Œï¼šåºåˆ—åŒ–åŒºå—å¤´ï¼Œç„¶åä½¿ç”¨HashManager.DoubleSHA256è®¡ç®—
	headerBytes, err := proto.Marshal(block.Header)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–åŒºå—å¤´å¤±è´¥: height=%d, error=%w", height, err)
	}

	// ä½¿ç”¨HashManagerè®¡ç®—DoubleSHA256å“ˆå¸Œï¼ˆä¸æŒ–çŸ¿ä¿æŒä¸€è‡´ï¼‰
	blockHash := h.hashManager.DoubleSHA256(headerBytes)

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetBlockHash height=%d hash=%x (å†å²åŒºå—)", height, blockHash[:min(8, len(blockHash))])
	}
	return blockHash, nil
}

// min è¿”å›ä¸¤ä¸ªæ•´æ•°ä¸­çš„è¾ƒå°å€¼ï¼ˆè¾…åŠ©å‡½æ•°ï¼‰
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}

// GetBlockTimestamp è·å–å½“å‰åŒºå—æ—¶é—´æˆ³ï¼ˆç¡®å®šæ€§å¿«ç…§ï¼‰
func (h *HostRuntimePorts) GetBlockTimestamp(ctx context.Context) (uint64, error) {
	// ä» ExecutionContext è·å–å›ºå®šå¿«ç…§
	timestamp := h.execCtx.GetBlockTimestamp()

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetBlockTimestamp timestamp=%d", timestamp)
	}

	return timestamp, nil
}

// GetChainID è·å–é“¾æ ‡è¯†
func (h *HostRuntimePorts) GetChainID(ctx context.Context) ([]byte, error) {
	// ä» ExecutionContext è·å–
	chainID := h.execCtx.GetChainID()

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetChainID chainID=%x", chainID)
	}

	return chainID, nil
}

// GetCaller è·å–è°ƒç”¨è€…åœ°å€
func (h *HostRuntimePorts) GetCaller(ctx context.Context) ([]byte, error) {
	// ä» ExecutionContext è·å–
	caller := h.execCtx.GetCallerAddress()

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetCaller caller=%x", caller)
	}

	return caller, nil
}

// GetContractAddress è·å–å½“å‰åˆçº¦åœ°å€
func (h *HostRuntimePorts) GetContractAddress(ctx context.Context) ([]byte, error) {
	// ä» ExecutionContext è·å–
	contractAddr := h.execCtx.GetContractAddress()

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetContractAddress contract=%x", contractAddr)
	}

	return contractAddr, nil
}

// GetTransactionID è·å–å½“å‰äº¤æ˜“ID
func (h *HostRuntimePorts) GetTransactionID(ctx context.Context) ([]byte, error) {
	// ä» ExecutionContext è·å–
	txID := h.execCtx.GetTransactionID()

	if h.logger != nil {
		h.logger.Debugf("HostABI.GetTransactionID txID=%x", txID)
	}

	return txID, nil
}

// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
// ç±»åˆ« Bï¼šUTXO æŸ¥è¯¢ï¼ˆåªè¯»ï¼‰- 2ä¸ªåŸè¯­
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

// UTXOLookup æŸ¥è¯¢æŒ‡å®š UTXO
func (h *HostRuntimePorts) UTXOLookup(ctx context.Context, outpoint *pb.OutPoint) (*pb.TxOutput, error) {
	if outpoint == nil {
		return nil, fmt.Errorf("outpoint ä¸èƒ½ä¸º nil")
	}

	// å§”æ‰˜ç»™ eutxoQuery
	utxo, err := h.eutxoQuery.GetUTXO(ctx, outpoint)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢ UTXO å¤±è´¥: %w", err)
	}

	// å°† UTXO è½¬æ¢ä¸º TxOutput
	if utxo == nil {
		return nil, fmt.Errorf("UTXO ä¸å­˜åœ¨")
	}

	// ä» UTXO æå– TxOutput
	// æ”¯æŒä¸¤ç§å­˜å‚¨ç­–ç•¥ï¼š
	// 1. CachedOutputï¼šç›´æ¥è¿”å›ç¼“å­˜çš„è¾“å‡ºï¼ˆçƒ­æ•°æ®ï¼‰
	// 2. ReferenceOnlyï¼šä»åŒºå—é“¾å›æº¯è·å–ï¼ˆå†·æ•°æ®ï¼‰
	var txOutput *pb.TxOutput

	// å°è¯•è·å–ç¼“å­˜çš„è¾“å‡ºï¼ˆçƒ­æ•°æ®ï¼‰
	if cachedOutput := utxo.GetCachedOutput(); cachedOutput != nil {
		txOutput = cachedOutput
		if h.logger != nil {
			h.logger.Debugf("HostABI.UTXOLookup ä½¿ç”¨çƒ­æ•°æ®ç¼“å­˜ - UTXO: %x:%d", outpoint.TxId[:8], outpoint.OutputIndex)
		}
	} else if utxo.GetReferenceOnly() {
		// ä»åŒºå—é“¾å›æº¯è·å–ï¼ˆå†·æ•°æ®ï¼‰
		if h.txQuery == nil {
			return nil, fmt.Errorf("txQuery æœªåˆå§‹åŒ–ï¼Œæ— æ³•å›æº¯è·å–UTXO")
		}
		_, _, transaction, err := h.txQuery.GetTransaction(ctx, outpoint.TxId)
		if err != nil {
			return nil, fmt.Errorf("è·å–å†å²äº¤æ˜“å¤±è´¥ [%x]: %w", outpoint.TxId, err)
		}
		if transaction == nil {
			return nil, fmt.Errorf("å†å²äº¤æ˜“ä¸å­˜åœ¨ [%x]", outpoint.TxId)
		}
		if outpoint.OutputIndex >= uint32(len(transaction.Outputs)) {
			return nil, fmt.Errorf("è¾“å‡ºç´¢å¼•è¶Šç•Œ - ç´¢å¼•: %d, æ€»è¾“å‡ºæ•°: %d", outpoint.OutputIndex, len(transaction.Outputs))
		}
		txOutput = transaction.Outputs[outpoint.OutputIndex]
		if txOutput == nil {
			return nil, fmt.Errorf("ç›®æ ‡è¾“å‡ºä¸ºç©º - ç´¢å¼•: %d", outpoint.OutputIndex)
		}
		if h.logger != nil {
			h.logger.Debugf("HostABI.UTXOLookup ä½¿ç”¨å†·æ•°æ®å›æº¯ - UTXO: %x:%d", outpoint.TxId[:8], outpoint.OutputIndex)
		}
	} else {
		return nil, fmt.Errorf("UTXOå­˜å‚¨ç­–ç•¥æ— æ•ˆï¼šæ—¢æ²¡æœ‰ç¼“å­˜è¾“å‡ºä¹Ÿä¸æ˜¯å¼•ç”¨æ¨¡å¼")
	}

	if h.logger != nil {
		h.logger.Debugf("HostABI.UTXOLookup æˆåŠŸ: txId=%x index=%d", outpoint.TxId[:8], outpoint.OutputIndex)
	}

	// P0: æ›´æ–°èµ„æºä½¿ç”¨ç»Ÿè®¡ï¼ˆUTXOæŸ¥è¯¢ï¼‰
	if h.execCtx != nil {
		if usage := h.execCtx.GetResourceUsage(); usage != nil {
			usage.UTXOQueries++
		}
	}

	return txOutput, nil
}

// UTXOExists æ£€æŸ¥ UTXO æ˜¯å¦å­˜åœ¨
func (h *HostRuntimePorts) UTXOExists(ctx context.Context, outpoint *pb.OutPoint) (bool, error) {
	if outpoint == nil {
		return false, fmt.Errorf("outpoint ä¸èƒ½ä¸º nil")
	}

	// å§”æ‰˜ç»™ eutxoQuery - å°è¯•æŸ¥è¯¢
	utxo, err := h.eutxoQuery.GetUTXO(ctx, outpoint)
	if err != nil {
		// å¦‚æœæ˜¯"ä¸å­˜åœ¨"é”™è¯¯ï¼Œè¿”å› false
		return false, nil
	}

	exists := utxo != nil

	if h.logger != nil {
		h.logger.Debugf("HostABI.UTXOExists txId=%x index=%d exists=%v", outpoint.TxId[:8], outpoint.OutputIndex, exists)
	}

	return exists, nil
}

// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
// ç±»åˆ« Cï¼šäº¤æ˜“è‰ç¨¿æ“ä½œï¼ˆå‰¯ä½œç”¨ï¼‰- 4ä¸ªåŸè¯­
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

// TxAddInput æ·»åŠ äº¤æ˜“è¾“å…¥
func (h *HostRuntimePorts) TxAddInput(ctx context.Context, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) {
	if outpoint == nil {
		return 0, fmt.Errorf("outpoint ä¸èƒ½ä¸º nil")
	}

	// è·å– DraftID å’Œ Draft
	draftID := h.execCtx.GetDraftID()
	draft, err := h.draftService.LoadDraft(ctx, draftID)
	if err != nil {
		return 0, fmt.Errorf("åŠ è½½è‰ç¨¿å¤±è´¥: %w", err)
	}

	// å§”æ‰˜ç»™ draftService
	index, err := h.draftService.AddInput(ctx, draft, outpoint, isReferenceOnly, unlockingProof)
	if err != nil {
		return 0, fmt.Errorf("è¿½åŠ è¾“å…¥å¤±è´¥: %w", err)
	}

	// ä¿å­˜è‰ç¨¿
	if err := h.draftService.SaveDraft(ctx, draft); err != nil {
		return 0, fmt.Errorf("ä¿å­˜è‰ç¨¿å¤±è´¥: %w", err)
	}

	// è®°å½•åˆ° ExecutionTrace
	h.execCtx.RecordHostFunctionCall(&ispcInterfaces.HostFunctionCall{
		FunctionName: "TxAddInput",
		Parameters: map[string]interface{}{
			"outpoint":        outpoint,
			"isReferenceOnly": isReferenceOnly,
		},
		Result: map[string]interface{}{
			"index": index,
		},
	})

	if h.logger != nil {
		h.logger.Debugf("HostABI.TxAddInput draftID=%s index=%d isRefOnly=%v", draftID, index, isReferenceOnly)
	}

	return index, nil
}

// TxAddAssetOutput æ·»åŠ èµ„äº§è¾“å‡º
func (h *HostRuntimePorts) TxAddAssetOutput(ctx context.Context, owner []byte, amount uint64, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) {
	if len(owner) != 20 {
		return 0, fmt.Errorf("owner åœ°å€å¿…é¡»æ˜¯ 20 å­—èŠ‚")
	}

	// è·å– DraftID å’Œ Draft
	draftID := h.execCtx.GetDraftID()
	draft, err := h.draftService.LoadDraft(ctx, draftID)
	if err != nil {
		return 0, fmt.Errorf("åŠ è½½è‰ç¨¿å¤±è´¥: %w", err)
	}

	// å§”æ‰˜ç»™ draftService
	index, err := h.draftService.AddAssetOutput(ctx, draft, owner, fmt.Sprintf("%d", amount), tokenID, lockingConditions)
	if err != nil {
		return 0, fmt.Errorf("è¿½åŠ èµ„äº§è¾“å‡ºå¤±è´¥: %w", err)
	}

	// âœ… å¦‚æœæ˜¯åˆçº¦ä»£å¸ï¼Œå¿…é¡»è®¾ç½® contractAddress ä¸ºå½“å‰æ‰§è¡Œåˆçº¦çš„åœ°å€
	if len(tokenID) > 0 {
		contractAddr := h.execCtx.GetContractAddress()
		if len(contractAddr) == 0 {
			return 0, fmt.Errorf("æ— æ³•è·å–åˆçº¦åœ°å€ï¼ˆåˆ›å»ºåˆçº¦ä»£å¸è¾“å‡ºéœ€è¦ï¼‰")
		}
		if len(contractAddr) != 20 {
			return 0, fmt.Errorf("åˆçº¦åœ°å€å¿…é¡»æ˜¯ 20 å­—èŠ‚ï¼Œå®é™…: %d", len(contractAddr))
		}
		// è®¾ç½® contractAddress åˆ°åˆšåˆ›å»ºçš„è¾“å‡º
		if index < uint32(len(draft.Tx.Outputs)) {
			output := draft.Tx.Outputs[index]
			if asset := output.GetAsset(); asset != nil {
				if contractToken := asset.GetContractToken(); contractToken != nil {
					contractToken.ContractAddress = contractAddr
				}
			}
		}
	}

	// ä¿å­˜è‰ç¨¿
	if err := h.draftService.SaveDraft(ctx, draft); err != nil {
		return 0, fmt.Errorf("ä¿å­˜è‰ç¨¿å¤±è´¥: %w", err)
	}

	// è®°å½•åˆ° ExecutionTrace
	h.execCtx.RecordHostFunctionCall(&ispcInterfaces.HostFunctionCall{
		FunctionName: "TxAddAssetOutput",
		Parameters: map[string]interface{}{
			"owner":  owner,
			"amount": amount,
		},
		Result: map[string]interface{}{
			"index": index,
		},
	})

	if h.logger != nil {
		h.logger.Debugf("HostABI.TxAddAssetOutput draftID=%s index=%d amount=%d", draftID, index, amount)
	}

	return index, nil
}

// TxAddResourceOutput æ·»åŠ èµ„æºè¾“å‡º
func (h *HostRuntimePorts) TxAddResourceOutput(ctx context.Context, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) {
	if len(contentHash) != 32 {
		return 0, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
	}
	if len(owner) != 20 {
		return 0, fmt.Errorf("owner åœ°å€å¿…é¡»æ˜¯ 20 å­—èŠ‚")
	}

	// è·å– DraftID å’Œ Draft
	draftID := h.execCtx.GetDraftID()
	draft, err := h.draftService.LoadDraft(ctx, draftID)
	if err != nil {
		return 0, fmt.Errorf("åŠ è½½è‰ç¨¿å¤±è´¥: %w", err)
	}

	// å§”æ‰˜ç»™ draftService
	index, err := h.draftService.AddResourceOutput(ctx, draft, contentHash, category, owner, lockingConditions, metadata)
	if err != nil {
		return 0, fmt.Errorf("è¿½åŠ èµ„æºè¾“å‡ºå¤±è´¥: %w", err)
	}

	// ä¿å­˜è‰ç¨¿
	if err := h.draftService.SaveDraft(ctx, draft); err != nil {
		return 0, fmt.Errorf("ä¿å­˜è‰ç¨¿å¤±è´¥: %w", err)
	}

	// è®°å½•åˆ° ExecutionTrace
	h.execCtx.RecordHostFunctionCall(&ispcInterfaces.HostFunctionCall{
		FunctionName: "TxAddResourceOutput",
		Parameters: map[string]interface{}{
			"contentHash": contentHash,
			"category":    category,
		},
		Result: map[string]interface{}{
			"index": index,
		},
	})

	if h.logger != nil {
		h.logger.Debugf("HostABI.TxAddResourceOutput draftID=%s index=%d contentHash=%x", draftID, index, contentHash[:8])
	}

	return index, nil
}

// TxAddStateOutput æ·»åŠ çŠ¶æ€è¾“å‡º
func (h *HostRuntimePorts) TxAddStateOutput(ctx context.Context, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) {
	if len(stateID) == 0 {
		return 0, fmt.Errorf("stateID ä¸èƒ½ä¸ºç©º")
	}
	if len(executionResultHash) != 32 {
		return 0, fmt.Errorf("executionResultHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
	}

	// è·å– DraftID å’Œ Draft
	draftID := h.execCtx.GetDraftID()
	draft, err := h.draftService.LoadDraft(ctx, draftID)
	if err != nil {
		return 0, fmt.Errorf("åŠ è½½è‰ç¨¿å¤±è´¥: %w", err)
	}

	// å§”æ‰˜ç»™ draftService
	index, err := h.draftService.AddStateOutput(ctx, draft, stateID, stateVersion, executionResultHash, publicInputs, parentStateHash)
	if err != nil {
		return 0, fmt.Errorf("è¿½åŠ çŠ¶æ€è¾“å‡ºå¤±è´¥: %w", err)
	}

	// ä¿å­˜è‰ç¨¿
	if err := h.draftService.SaveDraft(ctx, draft); err != nil {
		return 0, fmt.Errorf("ä¿å­˜è‰ç¨¿å¤±è´¥: %w", err)
	}

	// è®°å½•åˆ° ExecutionTrace
	h.execCtx.RecordHostFunctionCall(&ispcInterfaces.HostFunctionCall{
		FunctionName: "TxAddStateOutput",
		Parameters: map[string]interface{}{
			"stateID":      stateID,
			"stateVersion": stateVersion,
		},
		Result: map[string]interface{}{
			"index": index,
		},
	})

	if h.logger != nil {
		h.logger.Debugf("HostABI.TxAddStateOutput draftID=%s index=%d stateVersion=%d", draftID, index, stateVersion)
	}

	return index, nil
}

// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
// ç±»åˆ« Dï¼šèµ„æºæŸ¥è¯¢ï¼ˆåªè¯»ï¼‰- 2ä¸ªåŸè¯­
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

// ResourceLookup æŸ¥è¯¢èµ„æºå…ƒæ•°æ®
func (h *HostRuntimePorts) ResourceLookup(ctx context.Context, contentHash []byte) (*pbresource.Resource, error) {
	if len(contentHash) != 32 {
		return nil, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
	}

	// ä½¿ç”¨ ResourceQuery æŸ¥è¯¢èµ„æºå…ƒæ•°æ®
	resource, err := h.resourceQuery.GetResourceByContentHash(ctx, contentHash)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢èµ„æºå¤±è´¥: %w", err)
	}

	if h.logger != nil {
		h.logger.Debugf("HostABI.ResourceLookup contentHash=%x", contentHash[:8])
	}

	// P0: æ›´æ–°èµ„æºä½¿ç”¨ç»Ÿè®¡ï¼ˆèµ„æºæŸ¥è¯¢ï¼‰
	if h.execCtx != nil {
		if usage := h.execCtx.GetResourceUsage(); usage != nil {
			usage.ResourceQueries++
		}
	}

	return resource, nil
}

// ResourceExists æ£€æŸ¥èµ„æºæ˜¯å¦å­˜åœ¨
func (h *HostRuntimePorts) ResourceExists(ctx context.Context, contentHash []byte) (bool, error) {
	if len(contentHash) != 32 {
		return false, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
	}

	// å§”æ‰˜ç»™ repoManager - å°è¯•æŸ¥è¯¢
	resource, err := h.uresCAS.ReadFile(ctx, contentHash)
	if err != nil {
		// å¦‚æœæ˜¯"ä¸å­˜åœ¨"é”™è¯¯ï¼Œè¿”å› false
		return false, nil
	}

	exists := resource != nil

	if h.logger != nil {
		h.logger.Debugf("HostABI.ResourceExists contentHash=%x exists=%v", contentHash[:8], exists)
	}

	return exists, nil
}

// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
// ç±»åˆ« Gï¼šæ‰§è¡Œè¿½è¸ªï¼ˆè¾…åŠ©ï¼‰- 2ä¸ªåŸè¯­
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

// EmitEvent å‘å°„é“¾ä¸Šäº‹ä»¶
func (h *HostRuntimePorts) EmitEvent(ctx context.Context, eventType string, eventData []byte) error {
	// è®°å½•åˆ° ExecutionTrace
	h.execCtx.RecordHostFunctionCall(&ispcInterfaces.HostFunctionCall{
		FunctionName: "EmitEvent",
		Parameters: map[string]interface{}{
			"eventType": eventType,
			"dataSize":  len(eventData),
		},
		Result: map[string]interface{}{
			"emitted": true,
		},
	})

	// å°†äº‹ä»¶æ·»åŠ åˆ°æ‰§è¡Œä¸Šä¸‹æ–‡
	// äº‹ä»¶ä¼šè¢«åŒ…å«åœ¨æ‰§è¡Œç»“æœä¸­ï¼Œä¾›ä¸Šå±‚ï¼ˆå¦‚ZKè¯æ˜ï¼‰ä½¿ç”¨
	event := &ispcInterfaces.Event{
		Type:      eventType,
		Timestamp: 0, // ç”±AddEventè‡ªåŠ¨å¡«å……
		Data: map[string]interface{}{
			"data": eventData,
		},
	}
	if err := h.execCtx.AddEvent(event); err != nil {
		if h.logger != nil {
			h.logger.Warnf("HostABI.EmitEvent æ·»åŠ äº‹ä»¶å¤±è´¥: %v", err)
		}
		return fmt.Errorf("æ·»åŠ äº‹ä»¶å¤±è´¥: %w", err)
	}

	if h.logger != nil {
		h.logger.Debugf("HostABI.EmitEvent eventType=%s dataSize=%d", eventType, len(eventData))
	}

	return nil
}

// LogDebug è®°å½•è°ƒè¯•æ—¥å¿—ï¼ˆéé“¾ä¸Šï¼‰
func (h *HostRuntimePorts) LogDebug(ctx context.Context, message string) error {
	if h.logger != nil {
		h.logger.Debugf("HostABI.LogDebug [Contract] %s", message)
	}

	// è®°å½•åˆ° ExecutionTrace
	h.execCtx.RecordHostFunctionCall(&ispcInterfaces.HostFunctionCall{
		FunctionName: "LogDebug",
		Parameters: map[string]interface{}{
			"message": message,
		},
		Result: map[string]interface{}{
			"logged": true,
		},
	})

	return nil
}
